<package format="2">
  <name>yolo_orb_slam3</name>
  <version>0.0.1</version>
  <description>
    yolo_orb_slam3
  </description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <author>Carlos Campos, Richard Elvira, Juan J. Gomez, Jose M.M. Montiel, Juan D. Tardos</author>
  <license>GPLv3</license>

  <!-- 编译时需要的依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- 运行时需要的依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>

